--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Leetcode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="120.h" />
     <ClInclude Include="139.h" />
     <ClInclude Include="198.h" />
     <ClInclude Include="300.h" />
     <ClInclude Include="322.h" />
+    <ClInclude Include="64.h" />
     <ClInclude Include="70.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
