--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClInclude Include="200.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="63.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
