--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -132,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="120.h" />
+    <ClInclude Include="128.h" />
     <ClInclude Include="139.h" />
     <ClInclude Include="198.h" />
     <ClInclude Include="200.h" />
