--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="63.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="128.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
