--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -51,7 +51,7 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="128.h">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
