--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="128.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="20.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
