--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="20.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="207.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
