--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="63.h" />
     <ClInclude Include="64.h" />
     <ClInclude Include="70.h" />
+    <ClInclude Include="80.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
