--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -62,5 +62,8 @@
     <ClInclude Include="80.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="14.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
