--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="128.h" />
     <ClInclude Include="139.h" />
     <ClInclude Include="14.h" />
+    <ClInclude Include="151.h" />
     <ClInclude Include="198.h" />
     <ClInclude Include="20.h" />
     <ClInclude Include="200.h" />
