--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="14.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="151.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
