--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClInclude Include="130.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="88.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
