--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="14.h" />
     <ClInclude Include="15.h" />
     <ClInclude Include="151.h" />
+    <ClInclude Include="189.h" />
     <ClInclude Include="198.h" />
     <ClInclude Include="20.h" />
     <ClInclude Include="200.h" />
