--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="63.h" />
     <ClInclude Include="64.h" />
     <ClInclude Include="70.h" />
+    <ClInclude Include="74.h" />
     <ClInclude Include="80.h" />
     <ClInclude Include="82.h" />
     <ClInclude Include="88.h" />
