--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -101,5 +101,8 @@
     <ClInclude Include="189.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="74.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
