--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="Leetcode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="11.h" />
     <ClInclude Include="120.h" />
     <ClInclude Include="125.h" />
     <ClInclude Include="128.h" />
