--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -119,5 +119,8 @@
     <ClInclude Include="740.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="11.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
