--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="11.h" />
     <ClInclude Include="120.h" />
+    <ClInclude Include="122.h" />
     <ClInclude Include="125.h" />
     <ClInclude Include="128.h" />
     <ClInclude Include="130.h" />
