--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="11.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="122.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
