--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="150.h" />
     <ClInclude Include="49.h" />
     <ClInclude Include="5.h" />
+    <ClInclude Include="55.h" />
     <ClInclude Include="56.h" />
     <ClInclude Include="57.h" />
     <ClInclude Include="63.h" />
