--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -128,5 +128,8 @@
     <ClInclude Include="155.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="55.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
