--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="300.h" />
     <ClInclude Include="322.h" />
     <ClInclude Include="150.h" />
+    <ClInclude Include="45.h" />
     <ClInclude Include="49.h" />
     <ClInclude Include="5.h" />
     <ClInclude Include="55.h" />
