--- a/Leetcode.vcxproj.filters
+++ b/Leetcode.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="55.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="45.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
