--- a/Leetcode.vcxproj
+++ b/Leetcode.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="88.h" />
     <ClInclude Include="92.h" />
     <ClInclude Include="P3796.h" />
+    <ClInclude Include="P3808.h" />
     <ClInclude Include="P5357-2.h" />
     <ClInclude Include="P5357-3.h" />
     <ClInclude Include="P5357.h" />
